--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run gen-api && ng serve --port 5200 --configuration=dev",
-    "startlocal": "npm run gen-api && ng serve --port 5200 --configuration=local",
+    "startlocal": "npm run gen-api-local && ng serve --port 5200 --configuration=local",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "gen-api": "ng-openapi-gen -i https://era-evacuees-dev.apps.silver.devops.gov.bc.ca/api/openapi/v1/openapi.json -o ./src/app/core/api --ignoreUnusedModels false"
+    "gen-api": "ng-openapi-gen -i https://era-evacuees-dev.apps.silver.devops.gov.bc.ca/api/openapi/v1/openapi.json -o ./src/app/core/api --ignoreUnusedModels false",
+    "gen-api-local": "ng-openapi-gen -i http://localhost:5020/api/openapi/v1/openapi.json -o ./src/app/core/api --ignoreUnusedModels false"
   },
   "private": true,
   "dependencies": {
