--- a/dfa/src/API/Dockerfile
+++ b/dfa/src/API/Dockerfile
@@ -15,15 +15,15 @@ RUN dotnet tool install --tool-path /tools dotnet-counters
 RUN dotnet tool install --tool-path /tools dotnet-dump
 
 WORKDIR /src
-COPY ["EMBC.Registrants.API/EMBC.Registrants.API.csproj", "EMBC.Registrants.API/"]
+COPY ["EMBC.DFA.API/EMBC.DFA.API.csproj", "EMBC.DFA.API/"]
 COPY ["EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj", "EMBC.ESS.Shared.Contracts/"]
 COPY ["EMBC.Utilities/EMBC.Utilities.csproj", "EMBC.Utilities/"]
 COPY ["EMBC.Utilities.Hosting/EMBC.Utilities.Hosting.csproj", "EMBC.Utilities.Hosting/"]
 COPY ["EMBC.Utilities.Caching/EMBC.Utilities.Caching.csproj", "EMBC.Utilities.Caching/"]
 COPY ["EMBC.Utilities.Telemetry/EMBC.Utilities.Telemetry.csproj", "EMBC.Utilities.Telemetry/"]
 COPY ["EMBC.Utilities.Messaging/EMBC.Utilities.Messaging.csproj", "EMBC.Utilities.Messaging/"]
-COPY ["EMBC.Tests.Unit.Registrants.API/EMBC.Tests.Unit.Registrants.API.csproj", "EMBC.Tests.Unit.Registrants.API/"]
-COPY ["EMBC.Registrants.sln", ".editorconfig", "./"]
+COPY ["EMBC.Tests.Unit.DFA.API/EMBC.Tests.Unit.DFA.API.csproj", "EMBC.Tests.Unit.DFA.API/"]
+COPY ["EMBC.DFA.sln", ".editorconfig", "./"]
 RUN dotnet restore .
 COPY . .
 
@@ -32,7 +32,7 @@ RUN dotnet test -c Release
 
 # build
 FROM build AS publish
-RUN dotnet publish "EMBC.Registrants.API/EMBC.Registrants.API.csproj" -c Release -o /app/publish --runtime linux-musl-x64 --no-self-contained
+RUN dotnet publish "EMBC.DFA.API/EMBC.DFA.API.csproj" -c Release -o /app/publish --runtime linux-musl-x64 --no-self-contained
 
 FROM base AS final
 # copy diagnostics tools
@@ -41,4 +41,4 @@ COPY --from=build /tools .
 # copy app
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "EMBC.Registrants.API.dll"]
+ENTRYPOINT ["dotnet", "EMBC.DFA.API.dll"]
