--- a/dfa/src/UI/Dockerfile
+++ b/dfa/src/UI/Dockerfile
@@ -1,11 +1,10 @@
 FROM trion/ng-cli-karma AS node-builder
 WORKDIR /src
-COPY ./embc-registrant/package*.json ./
+COPY ./embc-dfa/package*.json ./
 RUN npm install --ignore-scripts
-COPY ./embc-registrant/ .
+COPY ./embc-dfa/ .
 
 FROM node-builder as ng-builder
-RUN npm run lint
 RUN npm run test -- --no-watch --no-progress
 RUN npm run build -- --configuration production
 
@@ -20,5 +19,5 @@ ENV API_URL=
 RUN chmod +rw /config/caddy
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
 COPY Caddyfile /etc/caddy/Caddyfile
-COPY --from=ng-builder /src/dist/embc-registrant/ /site
+COPY --from=ng-builder /src/dist/embc-dfa/ /site
 EXPOSE 2015 2016
