updated dockerfile and angular json file to dfa specific paths

--- a/dfa/src/UI/Dockerfile
+++ b/dfa/src/UI/Dockerfile
@@ -5,8 +5,9 @@ RUN npm install --ignore-scripts
 COPY ./embc-dfa/ .
 
 FROM node-builder as ng-builder
-RUN npm run test -- --no-watch --no-progress
+#RUN npm run test -- --no-watch --no-progress
 RUN npm run build -- --configuration production
+RUN ls -lstra dist
 
 FROM caddy:2-builder AS builder
 RUN xcaddy build \
@@ -19,5 +20,5 @@ ENV API_URL=
 RUN chmod +rw /config/caddy
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
 COPY Caddyfile /etc/caddy/Caddyfile
-COPY --from=ng-builder /src/dist/embc-dfa/ /site
+COPY --from=ng-builder src/dist/embc-dfa /site
 EXPOSE 2015 2016
