--- a/dfa/src/UI/embc-dfa/angular.json
+++ b/dfa/src/UI/embc-dfa/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "embc-registrant": {
+    "embc-dfa": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/embc-registrant",
+            "outputPath": "dist/embc-dfa",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,26 +72,26 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "embc-registrant:build"
+            "browserTarget": "embc-dfa:build"
           },
           "configurations": {
             "local": {
-              "browserTarget": "embc-registrant:build:local",
+              "browserTarget": "embc-dfa:build:local",
               "proxyConfig": "proxy.conf.json"
             },
             "dev": {
-              "browserTarget": "embc-registrant:build:local",
+              "browserTarget": "embc-dfa:build:local",
               "proxyConfig": "proxy.dev.conf.json"
             },
             "production": {
-              "browserTarget": "embc-registrant:build:production"
+              "browserTarget": "embc-dfa:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "embc-registrant:build"
+            "browserTarget": "embc-dfa:build"
           }
         },
         "test": {
@@ -125,18 +125,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "embc-registrant:serve"
+            "devServerTarget": "embc-dfa:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "embc-registrant:serve:production"
+              "devServerTarget": "embc-dfa:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "embc-registrant",
+  "defaultProject": "embc-dfa",
   "cli": {
     "analytics": false
   }
