--- a/.github/workflows/zap-scan-config.yml
+++ b/.github/workflows/zap-scan-config.yml
@@ -8,6 +8,7 @@ jobs:
   zap_scan:
     runs-on: ubuntu-latest
     name: Scan ZAP website
+    if: github.ref == 'refs/heads/feature/dfa_cleanup'
     steps:
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.6.1
