--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,7 @@ updates:
   # NuGet dependencies
   - package-ecosystem: "nuget"
     directory: "/dfa/src/API"
+    target-branch: "feature/dfa_cleanup"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -10,6 +11,7 @@ updates:
   # npm dependencies - frontend
   - package-ecosystem: "npm"
     directory: "/dfa/src/UI"
+    target-branch: "feature/dfa_cleanup"
     schedule:
       interval: "weekly"
       day: "monday"
