--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,11 @@ updates:
   - package-ecosystem: "nuget"
     directory: "/dfa/src/API"
     target-branch: "feature/dfa_cleanup"
+    schedule:
+      interval: "daily"
   # npm dependencies - frontend
   - package-ecosystem: "npm"
     directory: "/dfa/src/UI"
     target-branch: "feature/dfa_cleanup"
+    schedule:
+      interval: "daily"
