--- a/dfa/src/UI/embc-dfa/angular.json
+++ b/dfa/src/UI/embc-dfa/angular.json
@@ -83,8 +83,13 @@
               "browserTarget": "embc-dfa:build:local",
               "proxyConfig": "proxy.dev.conf.json"
             },
+            "test": {
+              "browserTarget": "embc-dfa:build:local",
+              "proxyConfig": "proxy.test.conf.json"
+            },
             "production": {
-              "browserTarget": "embc-dfa:build:production"
+              "browserTarget": "embc-dfa:build:production",
+              "proxyConfig": "proxy.conf.json"
             }
           }
         },
