added training ui config

--- a/dfa/src/UI/embc-dfa/angular.json
+++ b/dfa/src/UI/embc-dfa/angular.json
@@ -87,6 +87,10 @@
               "browserTarget": "embc-dfa:build:local",
               "proxyConfig": "proxy.test.conf.json"
             },
+            "training": {
+              "browserTarget": "embc-dfa:build:local",
+              "proxyConfig": "proxy.training.conf.json"
+            },
             "production": {
               "browserTarget": "embc-dfa:build:production",
               "proxyConfig": "proxy.conf.json"
