--- a/.github/workflows/cd-oauth-server-project.yml
+++ b/.github/workflows/cd-oauth-server-project.yml
@@ -1,14 +1,15 @@
-name: cd-oauth-server
+name: cd-oauth-server-project
 
 on:
   workflow_dispatch: {}
   push:
     branches:
-      - master
+      #- master
+      - feature/dfa_cleanup
 
     paths:
       - "oauth-server/src/API/**"
-      - ".github/workflows/cd-oauth-server.yml"
+      - ".github/workflows/cd-oauth-server-project.yml"
 
 env:
   IMAGE_NAME: oauth-server
@@ -30,15 +31,15 @@ jobs:
       - name: Log into registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ secrets.DOCKER_PROJECT_REGISTRY }}
+          username: ${{ secrets.DOCKER_PROJECT_USERNAME }}
+          password: ${{ secrets.DOCKER_PROJECT_PASSWORD_BUILDER }}
 
       - name: Set image repository
         id: set_image_repository
         run: |
           # Set image repository and change all uppercase to lowercase
-          DOCKER_REPOSITORY=$(echo ${{ secrets.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }} | tr '[A-Z]' '[a-z]')
+          DOCKER_REPOSITORY=$(echo ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{ env.IMAGE_NAME }} | tr '[A-Z]' '[a-z]')
           echo "::set-output name=docker-repository::$DOCKER_REPOSITORY"
           
       - name: Pull image
