--- a/dfa/src/UI/embc-dfa/tsconfig.app.json
+++ b/dfa/src/UI/embc-dfa/tsconfig.app.json
@@ -13,6 +13,7 @@
     "src/**/*.d.ts",
     "src/app/sharedModules/forms/evacuee-profile-forms/**/*.component.ts",
     "src/app/sharedModules/forms/dfa-application-start-forms/**/*.component.ts",
-    "src/app/sharedModules/forms/dfa-application-main-forms/**/*.component.ts"
+    "src/app/sharedModules/forms/dfa-application-main-forms/**/*.component.ts",
+    "src/app/sharedModules/forms/dfa-prescreening-forms/**/*.component.ts"
   ]
 }
