--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -26,6 +26,12 @@
     "@angular/router": "~14.2.3",
     "@ng-idle/core": "^11.1.0",
     "@ng-idle/keepalive": "^11.0.3",
+    "@progress/kendo-angular-common": "^13.5.0",
+    "@progress/kendo-angular-icons": "^13.5.0",
+    "@progress/kendo-angular-l10n": "^13.5.0",
+    "@progress/kendo-angular-layout": "^13.5.0",
+    "@progress/kendo-angular-progressbar": "^13.5.0",
+    "@progress/kendo-licensing": "^1.3.2",
     "angular-oauth2-oidc": "^12.1.0",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.1.3",
@@ -50,12 +56,12 @@
     "@types/node": "^12.20.5",
     "@typescript-eslint/eslint-plugin": "~5.36.2",
     "@typescript-eslint/parser": "~5.36.2",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jsdoc": "~39.3.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "eslint-plugin-prettier": "3.4.0",
-    "eslint": "^8.23.1",
     "jasmine-core": "~3.10.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
