EMBCDFA-567 : landing page

--- a/dfa/src/UI/embc-dfa/angular.json
+++ b/dfa/src/UI/embc-dfa/angular.json
@@ -24,7 +24,10 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/dfa/favicon.ico",
               "src/assets",
+              "src/dfa",
+              "src/dfa/img",
               "src/dfa/dfa.html",
               {
                 "glob": "dfa.html",
