--- a/.github/workflows/cd-dfa-portal-support-api.yml
+++ b/.github/workflows/cd-dfa-portal-support-api.yml
@@ -2,14 +2,7 @@
 name: cd-dfa-portal-support-api
 
 on:
-  push:
-    branches:
-      #- master
-      - feature/dfa_cleanup
-
-    paths:
-      - "dfa/src/API/**"
-      - ".github/workflows/cd-dfa-portal-support-api.yml"
+  workflow_dispatch: {}
 
 env:
   IMAGE_NAME: dfa-portal-api
