updated actions with new appropriate branches

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,12 @@ updates:
   # NuGet dependencies
   - package-ecosystem: "nuget"
     directory: "/dfa/src/API"
-    target-branch: "feature/dfa_cleanup"
+    target-branch: "develop"
     schedule:
       interval: "daily"
   # npm dependencies - frontend
   - package-ecosystem: "npm"
     directory: "/dfa/src/UI"
-    target-branch: "feature/dfa_cleanup"
+    target-branch: "develop"
     schedule:
       interval: "daily"
