--- a/.github/workflows/cd-dfa-portal-support-ui.yml
+++ b/.github/workflows/cd-dfa-portal-support-ui.yml
@@ -2,7 +2,13 @@
 name: cd-dfa-portal-support-ui
 
 on:
-  workflow_dispatch: {}
+  push:
+    branches:
+      - support-develop
+
+    paths:
+      - "dfa/src/UI/**"
+      - ".github/workflows/cd-dfa-portal-project-ui.yml"
 
 env:
   IMAGE_NAME: dfa-portal-ui
