--- a/.github/workflows/cd-dfa-landing-page-project.yml
+++ b/.github/workflows/cd-dfa-landing-page-project.yml
@@ -4,8 +4,7 @@ name: cd-dfa-landing-page-project
 on:
   push:
     branches:
-      #- master
-      - feature/dfa_cleanup
+      - develop
 
     paths:
       - "landing-page/**"
