--- a/.github/workflows/cd-dfa-landing-page-support.yml
+++ b/.github/workflows/cd-dfa-landing-page-support.yml
@@ -4,8 +4,7 @@ name: cd-dfa-landing-page-support
 on:
   push:
     branches:
-      #- master
-      - feature/dfa_cleanup
+      - support-develop
 
     paths:
       - "landing-page/**"
