added workflow dispatch

--- a/.github/workflows/cd-dfa-portal-project-api.yml
+++ b/.github/workflows/cd-dfa-portal-project-api.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - "dfa/src/API/**"
       - ".github/workflows/cd-dfa-portal-project-api.yml"
-
+  workflow_dispatch:
 env:
   IMAGE_NAME: dfa-portal-api
   WORKING_DIRECTORY: ./dfa/src/API
