Trigerring new image

--- a/.github/workflows/cd-dfae-project-landing-page.yml
+++ b/.github/workflows/cd-dfae-project-landing-page.yml
@@ -85,4 +85,4 @@ jobs:
           git add .
 
           git commit -m "Update Dev Landing image tag"
-          git push origin main  # Update the branch name as needed
+          git push origin main  # Update the branch name as neededd
