--- a/.github/workflows/cd-dfae-project-api.yml
+++ b/.github/workflows/cd-dfae-project-api.yml
@@ -86,4 +86,4 @@ jobs:
           git add .
 
           git commit -m "Update Dev API image tag"
-          git push origin main  # Update the branch name as needed
+          git push origin main  # Update the branch name as neededd
