--- a/.github/workflows/cd-dfae-project-ui.yml
+++ b/.github/workflows/cd-dfae-project-ui.yml
@@ -85,4 +85,4 @@ jobs:
           git add .
 
           git commit -m "Update DEV UI image tag"
-          git push origin main  # Update the branch name as needed
+          git push origin main  # Update the branch name as neededd
