Added workflow for test env

--- a/.github/workflows/project-test-build-push-pipeline.yml
+++ b/.github/workflows/project-test-build-push-pipeline.yml
@@ -93,4 +93,4 @@ jobs:
           git add .
           
           git commit -m "Update test image tags on $DATETIME"
-          git push origin test  # Update the branch name as needed
+          git push origin main  # Update the branch name as needed
