--- a/.github/workflows/cd-dfa-portal-project-ui.yml
+++ b/.github/workflows/cd-dfa-portal-project-ui.yml
@@ -1,10 +1,10 @@
 #CD pipeline for DFA UI
-name: cd-dfa-portal-project-ui
+name: OLD-cd-dfa-portal-project-ui
 
 on:
   push:
     branches:
-      - develop
+      - 'feature/emcri-12'
 
     paths:
       - "dfa/src/UI/**"
