--- a/.github/workflows/cd-dfae-project-landing-page.yml
+++ b/.github/workflows/cd-dfae-project-landing-page.yml
@@ -4,8 +4,8 @@ name: cd-dfae-project-landing-page
 on:
   push:
     branches:
-      #      - develop
-      - 'feature/emcri-12'
+      - develop
+
     paths:
       - "landing-page/**"
       - ".github/workflows/cd-dfae-project-landing-page.yml"
