--- a/.github/workflows/cd-dfae-project-public-api.yml
+++ b/.github/workflows/cd-dfae-project-public-api.yml
@@ -1,11 +1,11 @@
 
-#CD pipeline for dfa api
+#CD pipeline for dfa api public
 name: cd-dfae-project-public-api
 
 on:
   push:
     branches:
-      - 'feature/emcri-99_1'
+      - develop
     paths:
       - "dfa-public/src/API/**"
       - ".github/workflows/cd-dfae-project-public-api.yml"
