--- a/.github/workflows/cd-dfae-project-public-ui.yml
+++ b/.github/workflows/cd-dfae-project-public-ui.yml
@@ -1,11 +1,11 @@
 
-#CD pipeline for dfa ui
+#CD pipeline for dfa ui public
 name: cd-dfae-project-public-ui
 
 on:
   push:
     branches:
-      - 'feature/emcri-99_1'
+      - develop
     paths:
       - "dfa-public/src/UI/**"
       - ".github/workflows/cd-dfae-project-public-ui.yml"
