[EMCRI-18] add unnecessary binaries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@
 # Angular local environment files
 **/environment.local.ts
 DFAautomationTests/bin/chromedriver.exe
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+bin/
+Bin/
+obj/
+Obj/
