--- a/pdf-service/Dockerfile
+++ b/pdf-service/Dockerfile
@@ -18,9 +18,14 @@
 # It assumes a particular naming and location for the pdf service C# project 
 
 FROM registry.access.redhat.com/ubi8/dotnet-80-runtime:8.0-5.20240327145241 AS base
-
+WORKDIR /opt/app-root/app
+ENV ASPNETCORE_URLS=http://*:8080
+ENV ASPNETCORE_FORWARDEDHEADERS_ENABLED=true
+ENV DOTNET_gcServer=1
+ARG VERSION
+ENV VERSION=$VERSION
 USER 0
-RUN /bin/sh -c pushd /opt     \
+RUN /bin/sh -c "cd /opt     \
     && INSTALL_PKGS=" xorg-x11-fonts-Type1 libpng libpng-devel libjpeg-turbo libjpeg-turbo-devel libX11 libXext libXrender xorg-x11-fonts-Type1 fontconfig psmisc"     \
     && yum --disableplugin=subscription-manager --enablerepo=ubi-8-appstream,ubi-8-baseos,ubi-8-codeready-builder install -y $INSTALL_PKGS     \
     && yum -y install http://mirror.centos.org/centos/8-stream/AppStream/x86_64/os/Packages/xorg-x11-fonts-75dpi-7.5-19.el8.noarch.rpm     \
@@ -30,20 +35,24 @@ RUN /bin/sh -c pushd /opt     \
     && echo $'#!/usr/bin/env sh\n    /usr/local/bin/wkhtmltopdf --zoom 1.3 $@ \n    ' > /usr/local/bin/Linux/wkhtmltopdf     \
     && chmod +x /usr/local/bin/Linux/wkhtmltopdf     \
     && yum --disableplugin=subscription-manager clean all -y     \
-    && popd
+    && popd"
 USER 1001
 
-WORKDIR /opt/app-root/app
+
 EXPOSE 8080
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build 
 
 
 WORKDIR /src
-COPY ["pdf-service.csproj", "pdf-service/"]
+COPY ["pdf-service.csproj", "./"]
 RUN dotnet restore "pdf-service.csproj"
 COPY . .
-WORKDIR "pdf-service"
+RUN pwd
+RUN ls -ltr
+WORKDIR "/src/"
+RUN pwd
+RUN ls -ltr
 RUN dotnet build "pdf-service.csproj" -c Release -o /app/build
 
 FROM build AS publish
