[EMCRI-135] Added logging to PDF Service

--- a/pdf-service/Properties/launchSettings.json
+++ b/pdf-service/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:53091;http://localhost:53092"
+      "applicationUrl": "https://localhost:53091"
     }
   }
 }
