--- a/pdf-service/Dockerfile
+++ b/pdf-service/Dockerfile
@@ -19,7 +19,7 @@
 
 FROM registry.access.redhat.com/ubi8/dotnet-80-runtime:8.0-5.20240327145241 AS base
 WORKDIR /opt/app-root/app
-ENV ASPNETCORE_URLS=http://*:8080
+#ENV ASPNETCORE_URLS=http://*:8080
 ENV ASPNETCORE_FORWARDEDHEADERS_ENABLED=true
 ENV DOTNET_gcServer=1
 ARG VERSION
@@ -60,5 +60,6 @@ RUN dotnet publish "pdf-service.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /opt/app-root/app
+EXPOSE 8080
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "pdf-service.dll"]
