Added gitops checkout logic

--- a/.github/workflows/cd-dfae-project-landing-page.yml
+++ b/.github/workflows/cd-dfae-project-landing-page.yml
@@ -19,6 +19,7 @@ env:
   IMAGE_NAME: dfa-landing-page
   WORKING_DIRECTORY: ./landing-page/src
   INDEX_FILE: index.html
+  ENV_FILE: dev_values.yaml
 
 jobs:
   build:
@@ -30,12 +31,16 @@ jobs:
         run: |
           if [[ "${{ github.event.inputs.environment }}" == "dev" ]];then
               echo "::set-output name=Landing_INDEX_FILE::project-dev.html"
+              echo "::set-output name=ENV_FILE::dev_values.yaml"
           elif [[ "${{ github.event.inputs.environment }}" == "test" ]];then
               echo "::set-output name=Landing_INDEX_FILE::project-test.html"
+              echo "::set-output name=ENV_FILE::test_values.yaml"
           elif [[ "${{ github.event.inputs.environment }}" == "training" ]];then
               echo "::set-output name=Landing_INDEX_FILE::project-training.html"
+              echo "::set-output name=ENV_FILE::train_values.yaml"
           elif [[ "${{ github.event.inputs.environment }}" == "prod" ]];then
               echo "::set-output name=Landing_INDEX_FILE::prod-index.html"
+              echo "::set-output name=ENV_FILE::prod_values.yaml"
           fi
 
       - uses: actions/checkout@v3
@@ -52,63 +57,62 @@ jobs:
         run: |
           cd html
           mv ${{steps.LandingDir.outputs.Landing_INDEX_FILE}} ${{env.INDEX_FILE}}
-          ls -ltr
           cat index.html |grep  "link-light-blue register-dfa-link"
 
 
-#      - name: Build Image
-#        working-directory: ${{env.WORKING_DIRECTORY}}
-#        run: |
-#          docker build -t ${{env.IMAGE_NAME}} .
-#
-#      - name: Tag Image
-#        run: |
-#          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:dev
-#
-#      - name: Docker Push
-#        run: |
-#          docker push ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:dev
-#
-#      - name: Checkout ArgoCD Repo
-#        id: gitops
-#        uses: actions/checkout@v4
-#        with:
-#          repository: bcgov-c/tenant-gitops-c2ee1a
-#          ref: main
-#          token: ${{ secrets.GITOPS_KEY }} # `GH_PAT` is a secret that contains your PAT
-#          path: gitops
-#
-#      - name: Update Helm values in gitops
-#        id: helm
-#        if: steps.gitops.outcome == 'success'  # Only run if the previous step (publish) was successful
-#        run: |
-#          # Clone the GitOps deployment configuration repository
-#          # Navigate to the directory containing your Helm values file for the environment develop -> DEV, test -> test and
-#          cd gitops/charts
-#
-#          # Update the Helm values file with the new image tag and version
-#          DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
-#
-#          sed -i  "s/landingtag: .*/landingtag: dev # Image Updated on $DATETIME/" ../deploy/dev_values.yaml
-#          sed -i  "s/landingtag: .*/landingtag: dev # Image Updated on $DATETIME/"  dfa-portal-landing-page/values.yaml
-#
-#          # Commit and push the changes
-#          git config --global user.email "actions@github.com"
-#          git config --global user.name "GitHub Actions"
-#
-#          git add .
-#
-#          git add ../deploy/dev_values.yaml
-#
-#          # Repackage Helm Chart
-#
-#          cd dfa-gitops
-#
-#          helm dependency build
-#
-#          cd charts
-#
-#          git add .
-#
-#          git commit -m "Update Dev Landing image tag"
-#          git push origin main  # Update the branch name as needed
+      - name: Build Image
+        working-directory: ${{env.WORKING_DIRECTORY}}
+        run: |
+          docker build -t ${{env.IMAGE_NAME}} .
+
+      - name: Tag Image
+        run: |
+          docker tag ${{env.IMAGE_NAME}} ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ github.event.inputs.environment }}
+          #docker tag from_image to_image_name:dev/test/train
+
+      - name: Docker Push
+        run: |
+          docker push ${{ secrets.DOCKER_PROJECT_REGISTRY }}/${{env.IMAGE_NAME}}:${{ github.event.inputs.environment }}
+
+      - name: Checkout ArgoCD Repo
+        id: gitops
+        uses: actions/checkout@v4
+        with:
+          repository: bcgov-c/tenant-gitops-c2ee1a
+          ref: main
+          token: ${{ secrets.GITOPS_KEY }} # `GH_PAT` is a secret that contains your PAT
+          path: gitops
+
+      - name: Update Helm values in gitops
+        id: helm
+        if: steps.gitops.outcome == 'success'  # Only run if the previous step (publish) was successful
+        run: |
+          # Clone the GitOps deployment configuration repository
+          # Navigate to the directory containing your Helm values file for the environment develop -> DEV, test -> test and
+          cd gitops/charts
+
+          # Update the Helm values file with the new image tag and version
+          DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
+
+          sed -i  "s/landingtag: .*/landingtag: ${{ github.event.inputs.environment }} # Image Updated on $DATETIME/" ../deploy/${{steps.LandingDir.outputs.ENV_FILE}}
+
+
+          # Commit and push the changes
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+
+          git add ../deploy/${{steps.LandingDir.outputs.ENV_FILE}}
+
+          # Repackage Helm Chart
+
+          cd dfa-gitops
+
+          helm dependency build
+
+          cd charts
+
+          git add .
+
+          git commit -m "Update Dev Landing image tag"
+          git push origin main  # Update the branch name as needed
