--- a/.github/workflows/cd-dfae-project-landing-page.yml
+++ b/.github/workflows/cd-dfae-project-landing-page.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           cd html
           mv ${{steps.LandingDir.outputs.Landing_INDEX_FILE}} ${{env.INDEX_FILE}}
+          ls -ltr
           cat index.html |grep  "link-light-blue register-dfa-link"
 
 
