--- a/dfa-public/src/UI/embc-dfa/package.json
+++ b/dfa-public/src/UI/embc-dfa/package.json
@@ -32,13 +32,14 @@
     "@progress/kendo-angular-layout": "^13.5.0",
     "@progress/kendo-angular-progressbar": "^13.5.0",
     "@progress/kendo-licensing": "^1.3.2",
+    "angular-auth-oidc-client": "17.0.0",
     "angular-oauth2-oidc": "^12.1.0",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.1.3",
     "eslint-plugin-deprecation": "~1.3.2",
     "moment": "^2.29.4",
     "ng-recaptcha": "^11.0.0",
-    "ngx-markdown": "^14.0.1",
+    "ngx-markdown": "^15.1.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
