--- a/dfa-public/src/UI/embc-dfa/tsconfig.app.json
+++ b/dfa-public/src/UI/embc-dfa/tsconfig.app.json
@@ -14,6 +14,7 @@
     "src/app/sharedModules/forms/evacuee-profile-forms/**/*.component.ts",
     "src/app/sharedModules/forms/dfa-application-start-forms/**/*.component.ts",
     "src/app/sharedModules/forms/dfa-application-main-forms/**/*.component.ts",
-    "src/app/sharedModules/forms/dfa-prescreening-forms/**/*.component.ts"
+    "src/app/sharedModules/forms/dfa-prescreening-forms/**/*.component.ts",
+    "src/app/sharedModules/forms/dfa-project-main-forms/**/*.component.ts"
   ]
 }
