--- a/dfa-public/src/UI/embc-dfa/package.json
+++ b/dfa-public/src/UI/embc-dfa/package.json
@@ -32,9 +32,9 @@
     "@progress/kendo-angular-layout": "^13.5.0",
     "@progress/kendo-angular-progressbar": "^13.5.0",
     "@progress/kendo-licensing": "^1.3.2",
-    "angular-auth-oidc-client": "17.0.0",
+    "angular-auth-oidc-client": "^15.0.5",
     "angular2-text-mask": "^9.0.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.3",
     "eslint-plugin-deprecation": "~1.3.2",
     "moment": "^2.29.4",
     "ng-recaptcha": "^11.0.0",
