--- a/.github/workflows/cd-dfae-project-ui.yml
+++ b/.github/workflows/cd-dfae-project-ui.yml
@@ -5,7 +5,6 @@ on:
     branches:
        - develop
 
-
     paths:
       - "dfa/src/UI/**"
       - ".github/workflows/cd-dfae-project-ui.yml"
@@ -48,7 +47,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: bcgov-c/tenant-gitops-c2ee1a
-          ref: main
+          ref: develop
           token: ${{ secrets.GITOPS_KEY }} # `GH_PAT` is a secret that contains your PAT
           path: gitops
 
@@ -85,4 +84,4 @@ jobs:
           git add .
 
           git commit -m "Update DEV UI image tag"
-          git push origin main  # Update the branch name as needed
+          git push origin develop  # Update the branch name as needed
