--- a/dfa-public/src/UI/embc-dfa/package.json
+++ b/dfa-public/src/UI/embc-dfa/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "npm run gen-api && ng serve --port 5200 --configuration=dev",
     "startlocal": "npm run gen-api-local && ng serve --port 5200 --configuration=local",
+    "start-proxy": "npm run gen-api-local && ng serve --proxy-config proxy.dev.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,7 +33,7 @@
     "@progress/kendo-angular-layout": "^13.5.0",
     "@progress/kendo-angular-progressbar": "^13.5.0",
     "@progress/kendo-licensing": "^1.3.2",
-    "angular-auth-oidc-client": "^15.0.5",
+    "angular-auth-oidc-client": "15.0.5",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.3.3",
     "eslint-plugin-deprecation": "~1.3.2",
