--- a/dfa-public/src/UI/embc-dfa/package.json
+++ b/dfa-public/src/UI/embc-dfa/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "npm run gen-api && ng serve --port 5200 --configuration=dev",
     "startlocal": "npm run gen-api-local && ng serve --port 5200 --configuration=local",
-    "start-proxy": "npm run gen-api-local && ng serve --proxy-config proxy.dev.conf.json",
+    "start-proxy": "npm run gen-api-local && ng serve --port 5200 --configuration=dev",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
