--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -50,7 +50,7 @@
     "@angular-eslint/eslint-plugin-template": "~14.1.2",
     "@angular-eslint/schematics": "~14.1.2",
     "@angular-eslint/template-parser": "~14.1.2",
-    "@angular/cli": "~14.2.3",
+    "@angular/cli": "^14.2.13",
     "@angular/compiler-cli": "~14.2.3",
     "@types/jasmine": "~3.10.2",
     "@types/node": "^12.20.5",
