--- a/dfa-public/src/API/EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj
+++ b/dfa-public/src/API/EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj
@@ -27,6 +27,6 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="System.Text.Json" Version="6.0.*" />
+        <PackageReference Include="System.Text.Json" Version="8.0.4" />
     </ItemGroup>
 </Project>
