--- a/dfa-public/src/API/EMBC.Utilities/EMBC.Utilities.csproj
+++ b/dfa-public/src/API/EMBC.Utilities/EMBC.Utilities.csproj
@@ -34,7 +34,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.*" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.*" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-        <PackageReference Include="System.Text.Json" Version="6.0.*" />
+        <PackageReference Include="System.Text.Json" Version="8.0.4" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
