--- a/.github/workflows/cd-dfa-landing-page-support-prod-nomessage.yml
+++ b/.github/workflows/cd-dfa-landing-page-support-prod-nomessage.yml
@@ -1,5 +1,5 @@
 #CD pipeline for dfa landing page into the support stream
-name: cd-dfa-landing-page-support-test
+name: cd-dfa-landing-page-support-prod-nomessage
 
 on:
   workflow_dispatch:
@@ -58,10 +58,9 @@ jobs:
           echo DOCKER_REPOSITORY=${{ env.DOCKER_REPOSITORY }}
           echo VERSION=$VERSION          
  
-          copy html/index.test.html html/index.html
-
-          tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:test --build-arg VERSION=$VERSION -
-          docker tag ${{ env.DOCKER_REPOSITORY }}:test ${{ env.DOCKER_REPOSITORY }}:$VERSION
+       
+          tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:latest --cache-from=${{ env.DOCKER_REPOSITORY }}:latest --build-arg VERSION=$VERSION -
+          docker tag ${{ env.DOCKER_REPOSITORY }}:latest ${{ env.DOCKER_REPOSITORY }}:$VERSION
 
       - name: Push image
         env:
