--- a/.github/workflows/cd-dfa-landing-page-support-prod.yml
+++ b/.github/workflows/cd-dfa-landing-page-support-prod.yml
@@ -1,5 +1,5 @@
 #CD pipeline for dfa landing page into the support stream
-name: cd-dfa-landing-page-support-test
+name: cd-dfa-landing-page-support-prod
 
 on:
   workflow_dispatch:
@@ -58,10 +58,10 @@ jobs:
           echo DOCKER_REPOSITORY=${{ env.DOCKER_REPOSITORY }}
           echo VERSION=$VERSION          
  
-          copy html/index.test.html html/index.html
+          copy html/index.prod html/index.html
 
-          tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:test --build-arg VERSION=$VERSION -
-          docker tag ${{ env.DOCKER_REPOSITORY }}:test ${{ env.DOCKER_REPOSITORY }}:$VERSION
+          tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:prod --build-arg VERSION=$VERSION -
+          docker tag ${{ env.DOCKER_REPOSITORY }}:prod ${{ env.DOCKER_REPOSITORY }}:$VERSION
 
       - name: Push image
         env:
