--- a/.github/workflows/cd-dfa-landing-page-support-prod-nomessage.yml
+++ b/.github/workflows/cd-dfa-landing-page-support-prod-nomessage.yml
@@ -57,6 +57,7 @@ jobs:
           echo DOCKER_REPOSITORY=${{ env.DOCKER_REPOSITORY }}
           echo VERSION=$VERSION          
  
+          cp html/index.prod-nomessage.html  html/index.html
        
           tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:latest --cache-from=${{ env.DOCKER_REPOSITORY }}:latest --build-arg VERSION=$VERSION -
           docker tag ${{ env.DOCKER_REPOSITORY }}:latest ${{ env.DOCKER_REPOSITORY }}:$VERSION
