--- a/.github/workflows/cd-dfa-landing-page-support-prod.yml
+++ b/.github/workflows/cd-dfa-landing-page-support-prod.yml
@@ -57,7 +57,7 @@ jobs:
           echo DOCKER_REPOSITORY=${{ env.DOCKER_REPOSITORY }}
           echo VERSION=$VERSION          
  
-          copy html/index.prod html/index.html
+          cp html/index.prod.html html/index.html
 
           tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:prod --build-arg VERSION=$VERSION -
           docker tag ${{ env.DOCKER_REPOSITORY }}:prod ${{ env.DOCKER_REPOSITORY }}:$VERSION
