--- a/.github/workflows/cd-dfa-landing-page-support-prod-nomessage.yml
+++ b/.github/workflows/cd-dfa-landing-page-support-prod-nomessage.yml
@@ -10,8 +10,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    runs-on: ubuntu-latest    
 
     steps:
       - uses: actions/checkout@v3
@@ -58,6 +57,7 @@ jobs:
           echo DOCKER_REPOSITORY=${{ env.DOCKER_REPOSITORY }}
           echo VERSION=$VERSION          
  
+          cp html/index.prod-nomessage.html  html/index.html
        
           tar -czh . | docker build --load --tag ${{ env.DOCKER_REPOSITORY }}:latest --cache-from=${{ env.DOCKER_REPOSITORY }}:latest --build-arg VERSION=$VERSION -
           docker tag ${{ env.DOCKER_REPOSITORY }}:latest ${{ env.DOCKER_REPOSITORY }}:$VERSION
