--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run gen-api && ng serve --port 5200 --configuration=dev",
+    "serve": "ng serve --port 5200 --configuration=dev",
     "startlocal": "npm run gen-api-local && ng serve --port 5200 --configuration=local",
     "build": "ng build",
     "test": "ng test",
