--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -72,6 +72,6 @@
     "ng-openapi-gen": "^0.21.2",
     "prettier": "^2.6.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.7.4"
+    "typescript": "4.8"
   }
 }
