--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -33,8 +33,8 @@
     "@progress/kendo-angular-layout": "^13.5.0",
     "@progress/kendo-angular-progressbar": "^13.5.0",
     "@progress/kendo-licensing": "^1.3.2",
-    "angular-oauth2-oidc": "^12.1.0",
-    "angular2-text-mask": "^9.0.0",
+    "angular-imask": "^7.6.1",
+    "angular-oauth2-oidc": "^16.0.0",
     "bootstrap": "^5.1.3",
     "eslint-plugin-deprecation": "~1.3.2",
     "moment": "^2.29.4",
