--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~17.3.8",
+    "@angular-devkit/core": "^18.1.2",
     "@angular-eslint/builder": "~17.5.2",
     "@angular-eslint/eslint-plugin": "~17.5.2",
     "@angular-eslint/eslint-plugin-template": "~17.5.2",
