--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -55,6 +55,7 @@
     "@angular-eslint/template-parser": "~17.5.2",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "~17.3.12",
+    "@progress/kendo-angular-buttons": "^16.5.0",
     "@progress/kendo-angular-intl": "^16.5.0",
     "@progress/kendo-svg-icons": "^3.0.0",
     "@types/jasmine": "~3.10.2",
