--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -38,7 +38,7 @@
     "bootstrap": "^5.1.3",
     "eslint-plugin-deprecation": "~1.3.2",
     "moment": "^2.29.4",
-    "ng-recaptcha": "^12.0.2",
+    "ng-recaptcha-2": "^14.0.0",
     "ngx-markdown": "^17.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
