--- a/dfa/src/UI/embc-dfa/package.json
+++ b/dfa/src/UI/embc-dfa/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run gen-api && ng serve --port 5200 --configuration=dev",
-    "serve": "ng serve --port 5200 --configuration=dev",
+    "serve": "ng serve --port 5200 --configuration=local",
     "startlocal": "npm run gen-api-local && ng serve --port 5200 --configuration=local",
     "build": "ng build",
     "test": "ng test",
@@ -15,28 +15,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.3.12",
+    "@angular/animations": "~18.1.2",
     "@angular/cdk": "^17.3.10",
-    "@angular/common": "~17.3.12",
-    "@angular/compiler": "~17.3.12",
-    "@angular/core": "~17.3.12",
-    "@angular/forms": "~17.3.12",
+    "@angular/common": "~18.1.2",
+    "@angular/compiler": "~18.1.2",
+    "@angular/core": "~18.1.2",
+    "@angular/forms": "~18.1.2",
     "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "~17.3.12",
-    "@angular/platform-browser-dynamic": "~17.3.12",
-    "@angular/router": "~17.3.12",
+    "@angular/platform-browser": "~18.1.2",
+    "@angular/platform-browser-dynamic": "~18.1.2",
+    "@angular/router": "~18.1.2",
     "@ng-idle/core": "^14.0.0",
     "@ng-idle/keepalive": "^14.0.0",
-    "@progress/kendo-angular-common": "^13.5.0",
-    "@progress/kendo-angular-icons": "^13.5.0",
-    "@progress/kendo-angular-l10n": "^13.5.0",
-    "@progress/kendo-angular-layout": "^13.5.0",
-    "@progress/kendo-angular-progressbar": "^13.5.0",
+    "@progress/kendo-angular-common": "^16.5.0",
+    "@progress/kendo-angular-icons": "^16.5.0",
+    "@progress/kendo-angular-l10n": "^16.5.0",
+    "@progress/kendo-angular-layout": "^16.5.0",
+    "@progress/kendo-angular-progressbar": "^16.5.0",
     "@progress/kendo-licensing": "^1.3.2",
     "angular-imask": "^7.6.1",
     "angular-oauth2-oidc": "^16.0.0",
     "bootstrap": "^5.1.3",
-    "eslint-plugin-deprecation": "~1.3.2",
+    "eslint-plugin-deprecation": "~3.0.0",
     "moment": "^2.29.4",
     "ng-recaptcha-2": "^14.0.0",
     "ngx-markdown": "^17.2.1",
@@ -45,16 +45,16 @@
     "zone.js": "~0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.3.8",
+    "@angular-devkit/build-angular": "~18.1.2",
     "@angular-devkit/core": "^18.1.2",
     "@angular-devkit/schematics": "^18.1.2",
-    "@angular-eslint/builder": "~17.5.2",
-    "@angular-eslint/eslint-plugin": "~17.5.2",
-    "@angular-eslint/eslint-plugin-template": "~17.5.2",
-    "@angular-eslint/schematics": "~17.5.2",
-    "@angular-eslint/template-parser": "~17.5.2",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "~17.3.12",
+    "@angular-eslint/builder": "~18.1.0",
+    "@angular-eslint/eslint-plugin": "~18.1.0",
+    "@angular-eslint/eslint-plugin-template": "~18.1.0",
+    "@angular-eslint/schematics": "~18.1.0",
+    "@angular-eslint/template-parser": "~18.1.0",
+    "@angular/cli": "^18.1.2",
+    "@angular/compiler-cli": "~18.1.2",
     "@progress/kendo-angular-buttons": "^16.5.0",
     "@progress/kendo-angular-intl": "^16.5.0",
     "@progress/kendo-svg-icons": "^3.0.0",
@@ -78,6 +78,6 @@
     "ng-openapi-gen": "^0.21.2",
     "prettier": "^2.6.0",
     "ts-node": "~8.3.0",
-    "typescript": "5.2"
+    "typescript": "5.4.5"
   }
 }
