Adding changes in github workflows to trigger

--- a/.github/workflows/cd-dfae-project-public-ui.yml
+++ b/.github/workflows/cd-dfae-project-public-ui.yml
@@ -5,7 +5,7 @@ name: cd-dfae-project-public-ui
 on:
   push:
     branches:
-      - develop
+      - 'EMCRI-282'
     paths:
       - "dfa-public/src/UI/**"
       - ".github/workflows/cd-dfae-project-public-ui.yml"
