test and train workflow

--- a/.github/workflows/test-project-public-build-push.yml
+++ b/.github/workflows/test-project-public-build-push.yml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: bcgov-c/tenant-gitops-c2ee1a
-          ref: develop
+          ref: test
           token: ${{ secrets.GITOPS_KEY }} # `GH_PAT` is a secret that contains your PAT
           path: gitops
 
