[EMCRI-216] Force compiler to use 4.9 instead of newer 4.10

--- a/dfa-public/src/API/EMBC.Utilities/EMBC.Utilities.csproj
+++ b/dfa-public/src/API/EMBC.Utilities/EMBC.Utilities.csproj
@@ -33,6 +33,10 @@
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.*" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.*" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.*" />
+        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="System.Text.Json" Version="8.0.4" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
