--- a/dfa-public/src/API/EMBC.BCeID/EMBC.Gov.BCeID.csproj
+++ b/dfa-public/src/API/EMBC.BCeID/EMBC.Gov.BCeID.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.ServiceModel.Http" Version="4.6.0" />
     <PackageReference Include="System.ServiceModel.Security" Version="4.6.0" />
   </ItemGroup>
