--- a/dfa-public/src/API/EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj
+++ b/dfa-public/src/API/EMBC.ESS.Shared.Contracts/EMBC.ESS.Shared.Contracts.csproj
@@ -23,6 +23,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
