--- a/dfa-public/src/API/EMBC.Tests.Unit.DFA.API/EMBC.Tests.Unit.DFA.API.csproj
+++ b/dfa-public/src/API/EMBC.Tests.Unit.DFA.API/EMBC.Tests.Unit.DFA.API.csproj
@@ -10,6 +10,10 @@
   <ItemGroup>
     <PackageReference Include="bogus" Version="34.0.2" />
     <PackageReference Include="fakeiteasy" Version="7.3.1" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="shouldly" Version="4.1.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
