--- a/dfa-public/src/API/EMBC.Utilities.Hosting/EMBC.Utilities.Hosting.csproj
+++ b/dfa-public/src/API/EMBC.Utilities.Hosting/EMBC.Utilities.Hosting.csproj
@@ -29,6 +29,10 @@
         <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
         <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.*" />
+        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.9.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.GrpcCore" Version="1.0.0-beta3" />
         <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.8.1" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1" />
