changed branch name

--- a/.github/workflows/train-project-private-build-push.yml
+++ b/.github/workflows/train-project-private-build-push.yml
@@ -3,7 +3,7 @@ name: train-project-private-build-push.yml
 on:
   push:
     branches:
-       - train
+       - project-training
 
     paths:
       - "dfa/src/**"
