--- a/.github/workflows/test-project-private-build-push.yml
+++ b/.github/workflows/test-project-private-build-push.yml
@@ -3,7 +3,7 @@ name: test-project-private-build-push.yml
 on:
   push:
     branches:
-       - test
+       - project-test
 
     paths:
       - "dfa/src/**"
@@ -114,8 +114,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-          git add .
-
+      
           git add ../deploy/test_values.yaml
 
           # Repackage Helm Chart
