--- a/.github/workflows/test-project-public-build-push.yml
+++ b/.github/workflows/test-project-public-build-push.yml
@@ -3,7 +3,7 @@ name: test-project-public-build-push.yml
 on:
   push:
     branches:
-       - test
+       - project-test
 
     paths:
       - "dfa-public/src/**"
@@ -95,7 +95,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-          git add .
 
           git add ../deploy/test_public_values.yaml
 
