[EMCRI-216] Stop workflow trigger happening on 216 branch

--- a/.github/workflows/cd-dfae-project-public-api.yml
+++ b/.github/workflows/cd-dfae-project-public-api.yml
@@ -5,7 +5,7 @@ name: cd-dfae-project-public-api
 on:
   push:
     branches:
-      - 'EMCRI-216'
+      - 'develop'
     paths:
       - "dfa-public/src/API/**"
       - ".github/workflows/cd-dfae-project-public-api.yml"
