--- a/.github/workflows/test-project-private-build-push.yml
+++ b/.github/workflows/test-project-private-build-push.yml
@@ -10,6 +10,11 @@ on:
       - "dfa/src/**"
       - ".github/workflows/test-project-private-build-push.yml"
   workflow_dispatch:
+
+concurrency:
+  group: test-build
+  cancel-in-progress: false
+
 env:
   UI_IMAGE_NAME: dfa-portal-ui
   API_IMAGE_NAME: dfa-portal-api
@@ -102,13 +107,13 @@ jobs:
           # Update the Helm values file with the new image tag and version
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
-          sed -i  "s/apitag: .*/apitag: dev # Image Updated on $DATETIME/" ../deploy/test_values.yaml
+          sed -i  "s/apitag: .*/apitag: test # Image Updated on $DATETIME/" ../deploy/test_values.yaml
           sed -i  "s/apiversion: .*/apiversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/test_values.yaml
 
-          sed -i  "s/uitag: .*/uitag: dev # Image Updated on $DATETIME/" ../deploy/test_values.yaml
+          sed -i  "s/uitag: .*/uitag: test # Image Updated on $DATETIME/" ../deploy/test_values.yaml
           sed -i  "s/uiversion: .*/uiversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/test_values.yaml
 
-          sed -i  "s/authtag: .*/authtag: dev # Image Updated on $DATETIME/" ../deploy/test_values.yaml
+          sed -i  "s/authtag: .*/authtag: test # Image Updated on $DATETIME/" ../deploy/test_values.yaml
           sed -i  "s/authversion: .*/authversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/test_values.yaml
 
           # Commit and push the changes
@@ -128,5 +133,5 @@ jobs:
 
           git add .
 
-          git commit -m "Update Test API and UI image tag"
+          git commit -m "Update Test Private API and UI image tag"
           git push origin test  # Update the branch name as needed
