--- a/.github/workflows/test-project-public-build-push.yml
+++ b/.github/workflows/test-project-public-build-push.yml
@@ -10,6 +10,11 @@ on:
       - "dfa-public/src/**"
       - ".github/workflows/test-project-public-build-push.yml"
   workflow_dispatch:
+
+concurrency:
+  group: test-build
+  cancel-in-progress: false
+  
 env:
   UI_IMAGE_NAME: dfa-portal-ui-public
   API_IMAGE_NAME: dfa-portal-api-public
@@ -86,10 +91,10 @@ jobs:
           # Update the Helm values file with the new image tag and version
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
-          sed -i  "s/apipubtag: .*/apipubtag: dev # Image Updated on $DATETIME/" ../deploy/test_public_values.yaml
+          sed -i  "s/apipubtag: .*/apipubtag: test # Image Updated on $DATETIME/" ../deploy/test_public_values.yaml
           sed -i  "s/apipubversion: .*/apipubversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/test_public_values.yaml
 
-          sed -i  "s/uipubtag: .*/uipubtag: dev # Image Updated on $DATETIME/" ../deploy/test_public_values.yaml
+          sed -i  "s/uipubtag: .*/uipubtag: test # Image Updated on $DATETIME/" ../deploy/test_public_values.yaml
           sed -i  "s/uipubversion: .*/uipubversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/test_public_values.yaml
 
           # Commit and push the changes
@@ -109,5 +114,5 @@ jobs:
 
           git add .
 
-          git commit -m "Update Test API and UI image tag"
+          git commit -m "Update Test Public API and UI image tag"
           git push origin test  # Update the branch name as needed
