--- a/.github/workflows/train-project-public-build-push.yml
+++ b/.github/workflows/train-project-public-build-push.yml
@@ -10,6 +10,10 @@ on:
       - "dfa-public/src/**"
       - ".github/workflows/train-project-public-build-push.yml"
   workflow_dispatch:
+concurrency:
+  group: train-build
+  cancel-in-progress: false
+  
 env:
   UI_IMAGE_NAME: dfa-portal-ui-public
   API_IMAGE_NAME: dfa-portal-api-public
@@ -81,14 +85,11 @@ jobs:
           # Update the Helm values file with the new image tag and version
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
-          sed -i  "s/apitag: .*/apitag: dev # Image Updated on $DATETIME/" ../deploy/train_public_values.yaml
-          sed -i  "s/apiversion: .*/apiversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/train_public_values.yaml
+          sed -i  "s/apipubtag: .*/apipubtag: training # Image Updated on $DATETIME/" ../deploy/train_public_values.yaml
+          sed -i  "s/apipubversion: .*/apipubversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/train_public_values.yaml
 
-          sed -i  "s/uitag: .*/uitag: dev # Image Updated on $DATETIME/" ../deploy/train_public_values.yaml
-          sed -i  "s/uiversion: .*/uiversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/train_public_values.yaml
-
-          sed -i  "s/authtag: .*/authtag: dev # Image Updated on $DATETIME/" ../deploy/train_public_values.yaml
-          sed -i  "s/authversion: .*/authversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/train_public_values.yaml
+          sed -i  "s/uipubtag: .*/uipubtag: training # Image Updated on $DATETIME/" ../deploy/train_public_values.yaml
+          sed -i  "s/uipubversion: .*/uipubversion: ${{ steps.short_sha.outputs.SHORT_SHA }} # Version Updated on $DATETIME/" ../deploy/train_public_values.yaml
 
           # Commit and push the changes
           git config --global user.email "actions@github.com"
@@ -106,5 +107,5 @@ jobs:
 
           git add .
 
-          git commit -m "Update Training API and UI image tag"
+          git commit -m "Update Training Public API and UI image tag"
           git push origin training  # Update the branch name as needed
